# zensynora

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODE_OPTIMIZATION_PROPOSAL.md  CONTRIBUTING.md  Dockerfile  FUNCTIONS_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_KNOWLEDGE_GAP_v2.1.md  LLM_RECOMMENDATION_PERSONAL.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  POST_REVIEW_RECOMMENDATIONS.md  README.md  STRATEGIC_PLAN_TWO_VARIANTS.md  Structura.txt  Structure.txt  _c1.md  _write_fixplan.py  big_diagram.md  cleanup.sh  cli.py  cli_cmd_report.md  code_analysis_summary.md  dead-code-report.md  deploy.py  deploy_ssh.ps1  discrepancy_report.md  docker-compose.yml  fixplan.md  function_list.md  how to run.md  implementation_gap_report.md  install.sh  install_and_run_portable.bat  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
.kilo/: package-lock.json
.kilo/plans/: 1775815086265-witty-falcon.md  1776256627896-curious-squid.md
archive/: README.md  tools_backup.py
ark/: IMPLEMENTATION_PLAN_FROM_PLANX.md  future_updates_proposal.md  memory_improvement_plan.md  myclaw_optimization_analysis.md  planA.md  whatsapp_implementation_plan.md
diagrams/: big-diagram.html  docs-agent-swarm-guide.html  docs-architecture-diagram.html  docs-architecture-with-optimizations.html  docs-backends-guide.html  docs-capability-evolver-cross-reference-analysis.html  docs-dev-ark-agent-swarm-implementation-plan.html  docs-dev-ark-ark-merged-20260416-232212.html  docs-dev-plans-future-updates-proposal.html  docs-dev-plans-kimi.html  docs-dev-plans-knowledge-integration-plan.html  docs-dev-plans-whatsapp-implementation-plan.html  docs-exception-handling-implementation.html  docs-medic-agent-guide.html  docs-newtech-agent-guide.html  docs-skill-adapter-guide.html  generate.py  index.html  post-review-recommendations.html  readme-architecture.html  readme.html  strategic-plan-two-variants.html
diagrams/assets/: mermaid-config.json  palette.md  readme-architecture.mmd  theme.css
docs/: ARCHITECTURE.md  MEDIC_CHANGE_MGMT.md  OPTIMIZATION_AUDIT.md  SECURITY_FIXES_2026_04_29.md  SPRINTS_SUMMARY.md  TASK_TIMER_INTEGRATION.md  agent_catalog.md  agent_swarm_guide.md  architecture_diagram.md  architecture_with_optimizations.md  backends_guide.md  capability_evolver_cross_reference_analysis.md  exception_handling_implementation.md  future_implementation_plan.md  implementation_plan_new_agents.md  medic_agent_guide.md  newtech_agent_guide.md  review01.md  scheduler_features_guide.md  skill_adapter_guide.md
docs/dev/: ANALYSIS.md  CODE_OPTIMIZATION_PROPOSAL.md  DECOMPOSITION_PLAN.md  FUNCTIONS_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_KNOWLEDGE_GAP_v2.1.md  OPTIMIZATION_SUMMARY.md  Structure.txt  code_analysis_summary.md  how to run.md  implementation_gap_report.md  memopad-import-plan.md  new_think_methods.py  roadmap.md  (+1 more)
eval/: eval_agent_skills.py
graphify-out/: .graphify_detect.json  GRAPH_REPORT.md  build_report.py  code_files.txt  merge_ast.py  run_ast.py  tmp_query.py
myclaw/: __init__.py  admin_dashboard.py  agent.py  aiohttp_session.py  api_server.py  async_scheduler.py  async_utils.py  audit_log.py  benchmark_runner.py  cli.py  config.py  config_encryption.py  context_window.py  cost_tracker.py  dashboard.py  dashboard_server.py  defaults.py  exceptions.py  gateway.py  gdpr.py  http_session.py  knowledge_spaces.py  llm_library.py  logging.py  logging_config.py  memory.py  metering.py  metrics.py  mfa.py  multimodal.py  offline.py  onboard.py  plugin_system.py  provider.py  sandbox.py  scheduler_features.py  self_healer.py  semantic_cache.py  semantic_memory.py  skill_generator.py  (+8 more)
plans/: CHANGELOG.md  agent_swarm_implementation_plan.md  future_updates_proposal.md  glm5.md  knowledge_integration_plan.md  last_implementation_plan.md  medic_agent_implementation_plan.md  memory_improvement_plan.md  myclaw_optimization_analysis.md  plan.md  remaining_optimizations.md  turboquant_implementation_plan.md
tests/: __init__.py  test_agent.py  test_agent_classes.py  test_agent_internals.py  test_auth.py  test_caching_base.py  test_cost_tracker.py  test_discord_channel.py  test_evals.py  test_knowledge.py  test_marketplace.py  test_memory.py  test_messaging.py  test_observability.py  test_prompts.py  test_registry.py  test_registry_yaml.py  test_resilience.py  test_scheduler_features.py  test_security.py  test_sprint10_integrations.py  test_sprint8_perf_quality.py  test_structured_output.py  test_tenancy.py  test_tenancy_scoping.py  test_tools.py  test_vector_backends.py
webui/: index.html  package-lock.json  package.json
(+146 files in other folders)
